--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -3,7 +3,7 @@
         <div class="contacts-box">
             <h2 class="contacts-title">FRESH HARVEST BOX HAS GOT YOU COVERED</h2>
             <ul class="contacts-list list">
-                <li>
+                <li data-aos="fade-right">
                     <picture>
                         <!-- Desktop screen -->
                         <source media="(min-width: 1255px)"
@@ -20,7 +20,7 @@
                         <img src="./img/contacts/img.contacts.mobile@1x.png" alt="Melon image">
                     </picture>
                 </li>
-                <li class="contacts-image">
+                <li class="contacts-image" data-aos="fade-left">
                     <picture>
                         <!-- Desktop screen -->
                         <source media="(min-width: 1255px)"
@@ -35,9 +35,11 @@
                 </li>
             </ul>
         </div>
+
         <p class="contacts-text">Our boxes are packed with delicious, nutritious fruits and vegetables, perfect for
             anyone looking to eat healthier or support local farmers. Order your box today and start enjoying the best
             that nature has to offer!</p>
+
         <!-- CONTACTS FORM -->
         <form class="contacts-form" autocomplete="off">
             <div class="contacts-form-box">
