--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -12,7 +12,7 @@
         </p>
 
         <ul class="card-set product-list list">
-            <li class="card-set-item card strawberry">
+            <li class="card-set-item card strawberry" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Strawberry</p>
                     <p class="card-uppertitle">Plant</p>
@@ -31,7 +31,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card banana">
+            <li class="card-set-item card banana" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Banana</p>
                     <p class="card-uppertitle">Plant</p>
@@ -48,7 +48,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card watermelon">
+            <li class="card-set-item card watermelon" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Watermelon</p>
                     <p class="card-uppertitle">Plant</p>
@@ -67,7 +67,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card lime">
+            <li class="card-set-item card lime" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Lime</p>
                     <p class="card-uppertitle">Plant</p>
@@ -84,7 +84,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card apple">
+            <li class="card-set-item card apple" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Apple</p>
                     <p class="card-uppertitle">Plant</p>
@@ -101,7 +101,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card peach">
+            <li class="card-set-item card peach" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Peach</p>
                     <p class="card-uppertitle">Plant</p>
@@ -118,7 +118,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card plums">
+            <li class="card-set-item card plums" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Plums</p>
                     <p class="card-uppertitle">Plant</p>
@@ -135,7 +135,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card orange">
+            <li class="card-set-item card orange" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Orange</p>
                     <p class="card-uppertitle">Plant</p>
@@ -152,7 +152,7 @@
                     </div>
                 </article>
             </li>
-            <li class="card-set-item card kiwi">
+            <li class="card-set-item card kiwi" data-aos="zoom-in-up">
                 <article>
                     <p class="card-title">Kiwi</p>
                     <p class="card-uppertitle">Plant</p>
