--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,42 +1,29 @@
 <section class="hero">
   <div class="hero-container container">
     <div class="background">
-      <img
-        class="dec-straw"
-        srcset="./img/opt-img/hero/strawberry-hero-mob-w56@1x.png x1,
-        ./img/opt-img/hero/strawberry-hero-mob-w56@2x.png x2"
-        src="./img/opt-img/hero/strawberry-hero-tabl-w108@1x.png"
-        width="56"
-        height="56"
-      />
+      <img class="dec-straw" srcset="./img/opt-img/hero/strawberry-hero-mob-w56@1x.png x1,
+        ./img/opt-img/hero/strawberry-hero-mob-w56@2x.png x2" src="./img/opt-img/hero/strawberry-hero-tabl-w108@1x.png"
+        width="56" height="56" />
 
-      <img
-        class="dec-babnan"
-        src="./img/opt-img/hero/banana-hero-mob-w66@1x.png"
-        srcset="./img/opt-img/hero/banana-hero-mob-w66@1x.png x1,
-        ./img/opt-img/hero/banana-hero-mob-w66@2x.png x2"
-        width="66"
-        height="44"
-      />
+      <img class="dec-babnan" src="./img/opt-img/hero/banana-hero-mob-w66@1x.png" srcset="./img/opt-img/hero/banana-hero-mob-w66@1x.png x1,
+        ./img/opt-img/hero/banana-hero-mob-w66@2x.png x2" width="66" height="44" />
 
-      <img
-        srcset="./img/opt-img/hero/girl-with-orange-w836mob@1x.jpg x1,
-      ./img/opt-img/hero/girl-with-orange-desk-tabl.jpg x2"
-        src="./img/hero/girlwithborder-mob@1.png"
-        alt="girl-with-orange"
-        class="hero-photo"
-        width="335"
-        height="509"
-        loading="lazy"
-      />
+      <img srcset="./img/opt-img/hero/girl-with-orange-w836mob@1x.jpg x1,
+      ./img/opt-img/hero/girl-with-orange-desk-tabl.jpg x2" src="./img/hero/girlwithborder-mob@1.png"
+        alt="girl-with-orange" class="hero-photo" width="335" height="509" loading="lazy" data-aos="zoom-in" />
+
       <h1 class="hero-text">
         fresh harvest box is your 0ne-stop place for a delicious fruit basket
       </h1>
-      <button class="hero-btn" type="button">shop<br />now</button>
+
+      <button class="hero-btn" type="button" data-aos="zoom-in-up" data-aos-duration="250" data-aos-easing="ease-in-sine">
+        <a class="hero-btn-txt link" href="#fruits">shop now</a>
+      </button>
     </div>
+
     <ul class="hero-cards list">
-      <li class="wrap-position width">
-        <div class="wrap-cards">
+      <li class="wrap-position width" data-aos="fade-right">
+        <div class=" wrap-cards">
           <p class="card-text">
             Our expertly curated fruit baskets are made with the freshest,
             highest quality fruits available. Whether you are looking for a
@@ -44,37 +31,28 @@
             you covered.
           </p>
           <div class="top-card">
-            <h3 class="top-card-text">Fruit</h3>
+            <h3 class=" top-card-text">Fruit</h3>
             <div class="thamb-hero">
-              <img
-                class="hero-img"
-                src="./img/hero/nwatermelon-mob@1.png"
-                width="239"
-                height="172"
-              />
+              <img class="hero-img" src="./img/hero/nwatermelon-mob@1.png" width="239" height="172" />
               <p class="low-card-text">
                 Refreshing and juicy, watermelon is the perfect summer treat and
                 a great source of hydration
               </p>
             </div>
           </div>
-        </div></li>
-      <li class="tag-list width">
-         <ul class="tags">
+        </div>
+      </li>
+      <li class="tag-list width" data-aos="fade-left">
+        <ul class=" tags" data-aos="fade-left" data-aos-delay="300">
           <li class="hero-teg">#organic</li>
           <li class="hero-teg">#products</li>
           <li class="hero-teg">#basket</li>
           <li class="hero-teg">#fruits</li>
         </ul>
-         <div class="top-card low-card">
+        <div class="top-card low-card">
           <h3 class="top-card-text">Fruit</h3>
           <div class="wrap-cards low-wrap">
-            <img
-              class="hero-img hero-imglow"
-              src="./img/hero/strawberrybox-mob@1.png"
-              width="239"
-              height="187"
-            />
+            <img class="hero-img hero-imglow" src="./img/hero/strawberrybox-mob@1.png" width="239" height="187" />
             <p class="low-card-text">
               Sweet and juicy, strawberries are packed with vitamin C and
               antioxidants, making them a delicious and healthy snack
@@ -84,9 +62,5 @@
       </li>
     </ul>
 
-        </div>
-      </div>
-    </div>
   </div>
-  <!-- </div> -->
 </section>
