--- a/src/partials/work-it.html
+++ b/src/partials/work-it.html
@@ -10,20 +10,20 @@
       gift, our fruit baskets are the perfect choice.
     </p>
     <ul class="step-list list">
-      <li class="step-item">
+      <li class="step-item" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="0">
         <h3 class="steps-title first">First Step</h3>
         <p class="steps-uppertitle">
           Just choose the fruit you want to order by clicking on the checkboxes
           next to it.
         </p>
       </li>
-      <li class="step-item">
+      <li class="step-item" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
         <h3 class="steps-title second">Second Step</h3>
         <p class="steps-uppertitle">
           Click on the basket and fill out the form.
         </p>
       </li>
-      <li class="step-item">
+      <li class="step-item" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">
         <h3 class="steps-title third">Third Step</h3>
         <p class="steps-uppertitle">
           Sit back and relax! Your fresh fruit basket will be delivered.
@@ -31,21 +31,9 @@
       </li>
     </ul>
     <picture>
-      <source
-        media="(min-width: 1280px)"
-        srcset="./img/work-it/freshharvestbox-desktop.gif"
-        width="860px"
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="./img/work-it/freshharvestbox-tablet.gif"
-        width="704px"
-      />
-      <img
-        src="./img/work-it/freshharvestbox-mobile.gif"
-        style="width: auto"
-        class="image-gif"
-      />
+      <source media="(min-width: 1280px)" srcset="./img/work-it/freshharvestbox-desktop.gif" width="860px" />
+      <source media="(min-width: 768px)" srcset="./img/work-it/freshharvestbox-tablet.gif" width="704px" />
+      <img src="./img/work-it/freshharvestbox-mobile.gif" style="width: auto" class="image-gif" data-aos="fade-up"/>
     </picture>
   </div>
 </section>
