--- a/src/partials/work-it.html
+++ b/src/partials/work-it.html
@@ -31,26 +31,14 @@
       </li>
     </ul>
     <picture>
+      <!-- <source media="(min-width: 1280px)" srcset="./img/work-it/freshharvestbox-desktop.gif" width="860px" /> -->
+      <!-- <source media="(min-width: 768px)" srcset="./img/work-it/freshharvestbox-tablet.gif" width="704px" /> -->
+
+
       <source media="(min-width: 1280px)" srcset="./img/work-it/freshharvestbox-desktop.gif" width="860px" />
       <source media="(min-width: 768px)" srcset="./img/work-it/freshharvestbox-tablet.gif" width="704px" />
-      <img src="./img/work-it/freshharvestbox-mobile.gif" style="width: auto" class="image-gif" data-aos="fade-up"/>
-
-      <source
-        media="(min-width: 1280px)"
-        srcset="./img/work-it/freshharvestbox-desktop.gif"
-        width="860px"
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="./img/work-it/freshharvestbox-tablet.gif"
-        width="704px"
-      />
-      <img
-        src="./img/work-it/freshharvestbox-mobile.gif"
-        style="width: auto"
-        class="image-gif"
-        loading="lazy"
-      />
+      <!-- <img src="./img/work-it/freshharvestbox-mobile.gif" style="width: auto" class="image-gif" loading="lazy" /> -->
+      <img src="./img/work-it/freshharvestbox-mobile.gif" style="width: auto" class="image-gif" loading="lazy" data-aos="fade-up" />
     </picture>
   </div>
 </section>
