--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -43,12 +43,14 @@
         </div>
       </li>
       <li class="tag-list width" data-aos="fade-left">
-        <ul class=" tags" data-aos="fade-left" data-aos-delay="300">
-          <li class="hero-teg">#organic</li>
-          <li class="hero-teg">#products</li>
-          <li class="hero-teg">#basket</li>
-          <li class="hero-teg">#fruits</li>
+        <ul class=" tags list " data-aos="fade-left" data-aos-delay="300">
+          <li> <a class="hero-teg link" href="">#organic</a></li>
+          <li> <a class="hero-teg link" href="">#products</a></li>
+          <li> <a class="hero-teg link" href="">#basket</a></li>
+          <li> <a class="hero-teg link" href="">#fruits</a></li>
         </ul>
+
+          
         <div class="top-card low-card">
           <h3 class="top-card-text">Fruit</h3>
           <div class="wrap-cards low-wrap">
